--- a/requirements.txt
+++ b/requirements.txt
@@ -13,13 +13,13 @@ cachetools==5.3.3
 certifi==2024.2.2
 charset-normalizer==3.3.2
 chroma-hnswlib==0.7.3
-chromadb==0.4.24
+chromadb==0.5.0
 click==8.1.7
 coloredlogs==15.0.1
 dataclasses-json==0.6.4
 Deprecated==1.2.14
 distro==1.9.0
-fastapi==0.110.1
+fastapi==0.110.2
 filelock==3.13.4
 flatbuffers==24.3.25
 frozenlist==1.4.1
@@ -29,7 +29,7 @@ GitPython==3.1.43
 google-auth==2.29.0
 googleapis-common-protos==1.63.0
 greenlet==3.0.3
-grpcio==1.62.1
+grpcio==1.62.2
 h11==0.14.0
 httpcore==1.0.5
 httptools==0.6.1
@@ -45,12 +45,11 @@ jsonpointer==2.4
 jsonschema==4.21.1
 jsonschema-specifications==2023.12.1
 kubernetes==29.0.0
-langchain==0.1.16
-langchain-community==0.0.33
-langchain-core==0.1.44
-langchain-openai==0.1.3
-langchain-text-splitters==0.0.1
-langsmith==0.1.48
+langchain==0.1.4
+langchain-community==0.0.16
+langchain-core==0.1.17
+langchain-openai==0.0.5
+langsmith==0.0.92
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 marshmallow==3.21.1
@@ -63,7 +62,7 @@ mypy-extensions==1.0.0
 numpy==1.26.4
 oauthlib==3.2.2
 onnxruntime==1.17.3
-openai==1.21.2
+openai==1.23.6
 opentelemetry-api==1.24.0
 opentelemetry-exporter-otlp-proto-common==1.24.0
 opentelemetry-exporter-otlp-proto-grpc==1.24.0
@@ -81,13 +80,12 @@ pandas==2.2.2
 pillow==10.3.0
 posthog==3.5.0
 protobuf==4.25.3
-pulsar-client==3.5.0
-pyarrow==15.0.2
+pyarrow==16.0.0
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
-pydantic==2.7.0
-pydantic_core==2.18.1
-pydeck==0.8.1b0
+pydantic==2.7.1
+pydantic_core==2.18.2
+pydeck==0.9.0b1
 Pygments==2.17.2
 PyPika==0.48.9
 pyproject_hooks==1.0.0
@@ -96,24 +94,23 @@ python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.1
 PyYAML==6.0.1
-referencing==0.34.0
+referencing==0.35.0
 regex==2024.4.16
 requests==2.31.0
 requests-oauthlib==2.0.0
 rich==13.7.1
 rpds-py==0.18.0
 rsa==4.9
-ruff==0.4.1
 shellingham==1.5.4
 six==1.16.0
 smmap==5.0.1
 sniffio==1.3.1
 SQLAlchemy==2.0.29
 starlette==0.37.2
-streamlit==1.33.0
+streamlit==1.31.1
 sympy==1.12
 tenacity==8.2.3
-tiktoken==0.6.0
+tiktoken==0.5.2
 tokenizers==0.19.1
 toml==0.10.2
 toolz==0.12.1
@@ -123,12 +120,14 @@ typer==0.12.3
 typing-inspect==0.9.0
 typing_extensions==4.11.0
 tzdata==2024.1
+tzlocal==5.2
 urllib3==2.2.1
 uvicorn==0.29.0
 uvloop==0.19.0
+validators==0.28.1
 watchdog==4.0.0
 watchfiles==0.21.0
-websocket-client==1.7.0
+websocket-client==1.8.0
 websockets==12.0
 wrapt==1.16.0
 yarl==1.9.4
