--- a/requirements.txt
+++ b/requirements.txt
@@ -47,9 +47,10 @@ jsonschema-specifications==2023.12.1
 kubernetes==29.0.0
 langchain==0.1.4
 langchain-community==0.0.16
-langchain-core==0.1.17
+langchain-core==0.1.46
 langchain-openai==0.0.5
-langsmith==0.0.92
+langchain-pinecone==0.1.0
+langsmith==0.1.51
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 marshmallow==3.21.1
@@ -78,6 +79,7 @@ overrides==7.7.0
 packaging==23.2
 pandas==2.2.2
 pillow==10.3.0
+pinecone-client==3.2.2
 posthog==3.5.0
 protobuf==4.25.3
 pyarrow==16.0.0
@@ -101,6 +103,7 @@ requests-oauthlib==2.0.0
 rich==13.7.1
 rpds-py==0.18.0
 rsa==4.9
+ruff==0.4.2
 shellingham==1.5.4
 six==1.16.0
 smmap==5.0.1
