--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ altair==5.3.0
 annotated-types==0.6.0
 anyio==4.3.0
 attrs==23.2.0
+beautifulsoup4==4.12.3
 blinker==1.8.0
 cachetools==5.3.3
 certifi==2024.2.2
@@ -61,6 +62,7 @@ rpds-py==0.18.0
 six==1.16.0
 smmap==5.0.1
 sniffio==1.3.1
+soupsieve==2.5
 SQLAlchemy==2.0.29
 streamlit==1.33.0
 tenacity==8.2.3
