--- a/requirements.txt
+++ b/requirements.txt
@@ -45,6 +45,7 @@ packaging==23.2
 pandas==2.2.2
 pillow==10.3.0
 pinecone-client==3.2.2
+polars==0.20.23
 protobuf==4.25.3
 pyarrow==16.0.0
 pydantic==2.7.1
@@ -59,6 +60,7 @@ regex==2024.4.16
 requests==2.31.0
 rich==13.7.1
 rpds-py==0.18.0
+ruff==0.4.2
 six==1.16.0
 smmap==5.0.1
 sniffio==1.3.1
